--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "bluebird": "^3.7.2",
+    "cli-progress": "^3.11.2",
     "vite": "^4.1.0"
   }
 }
