--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vanilla-context-menu": "^1.4.2",
     "vue": "^3.2.45"
   },
   "devDependencies": {
